Bundled chartjs so it runs in github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <script src="node_modules/chart.js/dist/Chart.min.js"></script>
+    <script src="chartjs/Chart.min.js"></script>
     <script>
       var portugal = [
         ["3/10/20", 41],
