--- a/index.html
+++ b/index.html
@@ -43,398 +43,113 @@
         }
       }
 
-      const data = [
-        ["1/22/20", 0, "Australia"],
-        ["1/22/20", 0, "Italy"],
-        ["1/22/20", 0, "Portugal"],
-        ["1/22/20", 0, "Spain"],
-        ["1/22/20", 1, "US"],
-        ["1/23/20", 0, "Australia"],
-        ["1/23/20", 0, "Italy"],
-        ["1/23/20", 0, "Portugal"],
-        ["1/23/20", 0, "Spain"],
-        ["1/23/20", 1, "US"],
-        ["1/24/20", 0, "Australia"],
-        ["1/24/20", 0, "Italy"],
-        ["1/24/20", 0, "Portugal"],
-        ["1/24/20", 0, "Spain"],
-        ["1/24/20", 2, "US"],
-        ["1/25/20", 0, "Australia"],
-        ["1/25/20", 0, "Italy"],
-        ["1/25/20", 0, "Portugal"],
-        ["1/25/20", 0, "Spain"],
-        ["1/25/20", 2, "US"],
-        ["1/26/20", 4, "Australia"],
-        ["1/26/20", 0, "Italy"],
-        ["1/26/20", 0, "Portugal"],
-        ["1/26/20", 0, "Spain"],
-        ["1/26/20", 5, "US"],
-        ["1/27/20", 5, "Australia"],
-        ["1/27/20", 0, "Italy"],
-        ["1/27/20", 0, "Portugal"],
-        ["1/27/20", 0, "Spain"],
-        ["1/27/20", 5, "US"],
-        ["1/28/20", 5, "Australia"],
-        ["1/28/20", 0, "Italy"],
-        ["1/28/20", 0, "Portugal"],
-        ["1/28/20", 0, "Spain"],
-        ["1/28/20", 5, "US"],
-        ["1/29/20", 6, "Australia"],
-        ["1/29/20", 0, "Italy"],
-        ["1/29/20", 0, "Portugal"],
-        ["1/29/20", 0, "Spain"],
-        ["1/29/20", 5, "US"],
-        ["1/30/20", 9, "Australia"],
-        ["1/30/20", 0, "Italy"],
-        ["1/30/20", 0, "Portugal"],
-        ["1/30/20", 0, "Spain"],
-        ["1/30/20", 5, "US"],
-        ["1/31/20", 9, "Australia"],
-        ["1/31/20", 2, "Italy"],
-        ["1/31/20", 0, "Portugal"],
-        ["1/31/20", 0, "Spain"],
-        ["1/31/20", 7, "US"],
-        ["2/1/20", 12, "Australia"],
-        ["2/1/20", 2, "Italy"],
-        ["2/1/20", 0, "Portugal"],
-        ["2/1/20", 1, "Spain"],
-        ["2/1/20", 8, "US"],
-        ["2/10/20", 15, "Australia"],
-        ["2/10/20", 3, "Italy"],
-        ["2/10/20", 0, "Portugal"],
-        ["2/10/20", 2, "Spain"],
-        ["2/10/20", 11, "US"],
-        ["2/11/20", 15, "Australia"],
-        ["2/11/20", 3, "Italy"],
-        ["2/11/20", 0, "Portugal"],
-        ["2/11/20", 2, "Spain"],
-        ["2/11/20", 12, "US"],
-        ["2/12/20", 15, "Australia"],
-        ["2/12/20", 3, "Italy"],
-        ["2/12/20", 0, "Portugal"],
-        ["2/12/20", 2, "Spain"],
-        ["2/12/20", 12, "US"],
-        ["2/13/20", 15, "Australia"],
-        ["2/13/20", 3, "Italy"],
-        ["2/13/20", 0, "Portugal"],
-        ["2/13/20", 2, "Spain"],
-        ["2/13/20", 13, "US"],
-        ["2/14/20", 15, "Australia"],
-        ["2/14/20", 3, "Italy"],
-        ["2/14/20", 0, "Portugal"],
-        ["2/14/20", 2, "Spain"],
-        ["2/14/20", 13, "US"],
-        ["2/15/20", 15, "Australia"],
-        ["2/15/20", 3, "Italy"],
-        ["2/15/20", 0, "Portugal"],
-        ["2/15/20", 2, "Spain"],
-        ["2/15/20", 13, "US"],
-        ["2/16/20", 15, "Australia"],
-        ["2/16/20", 3, "Italy"],
-        ["2/16/20", 0, "Portugal"],
-        ["2/16/20", 2, "Spain"],
-        ["2/16/20", 13, "US"],
-        ["2/17/20", 15, "Australia"],
-        ["2/17/20", 3, "Italy"],
-        ["2/17/20", 0, "Portugal"],
-        ["2/17/20", 2, "Spain"],
-        ["2/17/20", 13, "US"],
-        ["2/18/20", 15, "Australia"],
-        ["2/18/20", 3, "Italy"],
-        ["2/18/20", 0, "Portugal"],
-        ["2/18/20", 2, "Spain"],
-        ["2/18/20", 13, "US"],
-        ["2/19/20", 15, "Australia"],
-        ["2/19/20", 3, "Italy"],
-        ["2/19/20", 0, "Portugal"],
-        ["2/19/20", 2, "Spain"],
-        ["2/19/20", 13, "US"],
-        ["2/2/20", 12, "Australia"],
-        ["2/2/20", 2, "Italy"],
-        ["2/2/20", 0, "Portugal"],
-        ["2/2/20", 1, "Spain"],
-        ["2/2/20", 8, "US"],
-        ["2/20/20", 15, "Australia"],
-        ["2/20/20", 3, "Italy"],
-        ["2/20/20", 0, "Portugal"],
-        ["2/20/20", 2, "Spain"],
-        ["2/20/20", 13, "US"],
-        ["2/21/20", 19, "Australia"],
-        ["2/21/20", 20, "Italy"],
-        ["2/21/20", 0, "Portugal"],
-        ["2/21/20", 2, "Spain"],
-        ["2/21/20", 15, "US"],
-        ["2/22/20", 22, "Australia"],
-        ["2/22/20", 62, "Italy"],
-        ["2/22/20", 0, "Portugal"],
-        ["2/22/20", 2, "Spain"],
-        ["2/22/20", 15, "US"],
-        ["2/23/20", 22, "Australia"],
-        ["2/23/20", 155, "Italy"],
-        ["2/23/20", 0, "Portugal"],
-        ["2/23/20", 2, "Spain"],
-        ["2/23/20", 15, "US"],
-        ["2/24/20", 22, "Australia"],
-        ["2/24/20", 229, "Italy"],
-        ["2/24/20", 0, "Portugal"],
-        ["2/24/20", 2, "Spain"],
-        ["2/24/20", 51, "US"],
-        ["2/25/20", 22, "Australia"],
-        ["2/25/20", 322, "Italy"],
-        ["2/25/20", 0, "Portugal"],
-        ["2/25/20", 6, "Spain"],
-        ["2/25/20", 51, "US"],
-        ["2/26/20", 22, "Australia"],
-        ["2/26/20", 453, "Italy"],
-        ["2/26/20", 0, "Portugal"],
-        ["2/26/20", 13, "Spain"],
-        ["2/26/20", 57, "US"],
-        ["2/27/20", 23, "Australia"],
-        ["2/27/20", 655, "Italy"],
-        ["2/27/20", 0, "Portugal"],
-        ["2/27/20", 15, "Spain"],
-        ["2/27/20", 58, "US"],
-        ["2/28/20", 23, "Australia"],
-        ["2/28/20", 888, "Italy"],
-        ["2/28/20", 0, "Portugal"],
-        ["2/28/20", 32, "Spain"],
-        ["2/28/20", 60, "US"],
-        ["2/29/20", 25, "Australia"],
-        ["2/29/20", 1128, "Italy"],
-        ["2/29/20", 0, "Portugal"],
-        ["2/29/20", 45, "Spain"],
-        ["2/29/20", 68, "US"],
-        ["2/3/20", 12, "Australia"],
-        ["2/3/20", 2, "Italy"],
-        ["2/3/20", 0, "Portugal"],
-        ["2/3/20", 1, "Spain"],
-        ["2/3/20", 11, "US"],
-        ["2/4/20", 13, "Australia"],
-        ["2/4/20", 2, "Italy"],
-        ["2/4/20", 0, "Portugal"],
-        ["2/4/20", 1, "Spain"],
-        ["2/4/20", 11, "US"],
-        ["2/5/20", 13, "Australia"],
-        ["2/5/20", 2, "Italy"],
-        ["2/5/20", 0, "Portugal"],
-        ["2/5/20", 1, "Spain"],
-        ["2/5/20", 11, "US"],
-        ["2/6/20", 14, "Australia"],
-        ["2/6/20", 2, "Italy"],
-        ["2/6/20", 0, "Portugal"],
-        ["2/6/20", 1, "Spain"],
-        ["2/6/20", 11, "US"],
-        ["2/7/20", 15, "Australia"],
-        ["2/7/20", 3, "Italy"],
-        ["2/7/20", 0, "Portugal"],
-        ["2/7/20", 1, "Spain"],
-        ["2/7/20", 11, "US"],
-        ["2/8/20", 15, "Australia"],
-        ["2/8/20", 3, "Italy"],
-        ["2/8/20", 0, "Portugal"],
-        ["2/8/20", 1, "Spain"],
-        ["2/8/20", 11, "US"],
-        ["2/9/20", 15, "Australia"],
-        ["2/9/20", 3, "Italy"],
-        ["2/9/20", 0, "Portugal"],
-        ["2/9/20", 2, "Spain"],
-        ["2/9/20", 11, "US"],
-        ["3/1/20", 27, "Australia"],
-        ["3/1/20", 1694, "Italy"],
-        ["3/1/20", 0, "Portugal"],
-        ["3/1/20", 84, "Spain"],
-        ["3/1/20", 74, "US"],
-        ["3/10/20", 107, "Australia"],
-        ["3/10/20", 10149, "Italy"],
-        ["3/10/20", 41, "Portugal"],
-        ["3/10/20", 1695, "Spain"],
-        ["3/10/20", 959, "US"],
-        ["3/11/20", 128, "Australia"],
-        ["3/11/20", 12462, "Italy"],
-        ["3/11/20", 59, "Portugal"],
-        ["3/11/20", 2277, "Spain"],
-        ["3/11/20", 1281, "US"],
-        ["3/12/20", 128, "Australia"],
-        ["3/12/20", 12462, "Italy"],
-        ["3/12/20", 59, "Portugal"],
-        ["3/12/20", 2277, "Spain"],
-        ["3/12/20", 1663, "US"],
-        ["3/13/20", 200, "Australia"],
-        ["3/13/20", 17660, "Italy"],
-        ["3/13/20", 112, "Portugal"],
-        ["3/13/20", 5232, "Spain"],
-        ["3/13/20", 2179, "US"],
-        ["3/14/20", 250, "Australia"],
-        ["3/14/20", 21157, "Italy"],
-        ["3/14/20", 169, "Portugal"],
-        ["3/14/20", 6391, "Spain"],
-        ["3/14/20", 2727, "US"],
-        ["3/15/20", 297, "Australia"],
-        ["3/15/20", 24747, "Italy"],
-        ["3/15/20", 245, "Portugal"],
-        ["3/15/20", 7798, "Spain"],
-        ["3/15/20", 3499, "US"],
-        ["3/16/20", 377, "Australia"],
-        ["3/16/20", 27980, "Italy"],
-        ["3/16/20", 331, "Portugal"],
-        ["3/16/20", 9942, "Spain"],
-        ["3/16/20", 4632, "US"],
-        ["3/17/20", 452, "Australia"],
-        ["3/17/20", 31506, "Italy"],
-        ["3/17/20", 448, "Portugal"],
-        ["3/17/20", 11748, "Spain"],
-        ["3/17/20", 6421, "US"],
-        ["3/18/20", 568, "Australia"],
-        ["3/18/20", 35713, "Italy"],
-        ["3/18/20", 448, "Portugal"],
-        ["3/18/20", 13910, "Spain"],
-        ["3/18/20", 7783, "US"],
-        ["3/19/20", 681, "Australia"],
-        ["3/19/20", 41035, "Italy"],
-        ["3/19/20", 785, "Portugal"],
-        ["3/19/20", 17963, "Spain"],
-        ["3/19/20", 13677, "US"],
-        ["3/2/20", 30, "Australia"],
-        ["3/2/20", 2036, "Italy"],
-        ["3/2/20", 2, "Portugal"],
-        ["3/2/20", 120, "Spain"],
-        ["3/2/20", 98, "US"],
-        ["3/20/20", 791, "Australia"],
-        ["3/20/20", 47021, "Italy"],
-        ["3/20/20", 1020, "Portugal"],
-        ["3/20/20", 20410, "Spain"],
-        ["3/20/20", 19100, "US"],
-        ["3/21/20", 1071, "Australia"],
-        ["3/21/20", 53578, "Italy"],
-        ["3/21/20", 1280, "Portugal"],
-        ["3/21/20", 25374, "Spain"],
-        ["3/21/20", 25489, "US"],
-        ["3/3/20", 39, "Australia"],
-        ["3/3/20", 2502, "Italy"],
-        ["3/3/20", 2, "Portugal"],
-        ["3/3/20", 165, "Spain"],
-        ["3/3/20", 118, "US"],
-        ["3/4/20", 52, "Australia"],
-        ["3/4/20", 3089, "Italy"],
-        ["3/4/20", 5, "Portugal"],
-        ["3/4/20", 222, "Spain"],
-        ["3/4/20", 149, "US"],
-        ["3/5/20", 55, "Australia"],
-        ["3/5/20", 3858, "Italy"],
-        ["3/5/20", 8, "Portugal"],
-        ["3/5/20", 259, "Spain"],
-        ["3/5/20", 217, "US"],
-        ["3/6/20", 60, "Australia"],
-        ["3/6/20", 4636, "Italy"],
-        ["3/6/20", 13, "Portugal"],
-        ["3/6/20", 400, "Spain"],
-        ["3/6/20", 262, "US"],
-        ["3/7/20", 63, "Australia"],
-        ["3/7/20", 5883, "Italy"],
-        ["3/7/20", 20, "Portugal"],
-        ["3/7/20", 500, "Spain"],
-        ["3/7/20", 402, "US"],
-        ["3/8/20", 76, "Australia"],
-        ["3/8/20", 7375, "Italy"],
-        ["3/8/20", 30, "Portugal"],
-        ["3/8/20", 673, "Spain"],
-        ["3/8/20", 518, "US"],
-        ["3/9/20", 91, "Australia"],
-        ["3/9/20", 9172, "Italy"],
-        ["3/9/20", 30, "Portugal"],
-        ["3/9/20", 1073, "Spain"],
-        ["3/9/20", 583, "US"]
-      ];
-
-      const sortedData = Object.values(data).sort((lhs, rhs) =>
-        sortLabels(lhs[0], rhs[0])
-      );
-
-      let labelsMap = {};
-      sortedData.forEach(item => {
-        labelsMap[item[0]] = item[0];
-      });
-      const labels = Object.values(labelsMap).sort(sortLabels);
-
-      let countriesMap = {};
-      sortedData.forEach(item => {
-        countriesMap[item[2]] = item[2];
-      });
-      const countries = Object.values(countriesMap);
-
-      function getData(data, country) {
+      function filterData(data, country) {
         return data.filter(item => item[2] === country).map(item => item[1]);
       }
 
-      const colors = [
-        "#ffcd56",
-        "#36a2eb",
-        "#ff6384",
-        "#2f7ed8",
-        "#0d233a",
-        "#8bbc21",
-        "#910000",
-        "#1aadce",
-        "#492970",
-        "#f28f43",
-        "#77a1e5",
-        "#c42525",
-        "#a6c96a"
-      ];
+      function getConfig(data) {
+        const sortedData = Object.values(data).sort((lhs, rhs) =>
+          sortLabels(lhs[0], rhs[0])
+        );
 
-      const datasets = countries.map((item, index) => ({
-        label: item,
-        backgroundColor: colors[index],
-        borderColor: colors[index],
-        data: getData(sortedData, item),
-        fill: false
-      }));
+        let labelsMap = {};
+        sortedData.forEach(item => {
+          labelsMap[item[0]] = item[0];
+        });
+        const labels = Object.values(labelsMap).sort(sortLabels);
 
-      var config = {
-        type: "line",
-        data: {
-          labels: labels,
-          datasets: datasets
-        },
-        options: {
-          responsive: true,
-          title: {
-            display: true,
-            text: "Covid-19 contagion rate"
+        let countriesMap = {};
+        sortedData.forEach(item => {
+          countriesMap[item[2]] = item[2];
+        });
+        const countries = Object.values(countriesMap);
+
+        const colors = [
+          "#ffcd56",
+          "#36a2eb",
+          "#ff6384",
+          "#2f7ed8",
+          "#0d233a",
+          "#8bbc21",
+          "#910000",
+          "#1aadce",
+          "#492970",
+          "#f28f43",
+          "#77a1e5",
+          "#c42525",
+          "#a6c96a"
+        ];
+
+        const datasets = countries.map((item, index) => ({
+          label: item,
+          backgroundColor: colors[index],
+          borderColor: colors[index],
+          data: filterData(sortedData, item),
+          fill: false
+        }));
+
+        var config = {
+          type: "line",
+          data: {
+            labels: labels,
+            datasets: datasets
           },
-          tooltips: {
-            mode: "index",
-            intersect: false
-          },
-          hover: {
-            mode: "nearest",
-            intersect: true
-          },
-          scales: {
-            x: {
+          options: {
+            responsive: true,
+            title: {
               display: true,
-              scaleLabel: {
-                display: true,
-                labelString: "Date"
-              }
+              text: "Covid-19 contagion rate"
             },
-            yAxes: [
-              {
+            tooltips: {
+              mode: "index",
+              intersect: false
+            },
+            hover: {
+              mode: "nearest",
+              intersect: true
+            },
+            scales: {
+              x: {
                 display: true,
-                type: "logarithmic",
                 scaleLabel: {
                   display: true,
-                  labelString: "Confirmed Cases"
+                  labelString: "Date"
                 }
-              }
-            ]
+              },
+              yAxes: [
+                {
+                  display: true,
+                  type: "logarithmic",
+                  scaleLabel: {
+                    display: true,
+                    labelString: "Confirmed Cases"
+                  }
+                }
+              ]
+            }
           }
-        }
-      };
+        };
+        return config;
+      }
 
       window.onload = function() {
-        var ctx = document.getElementById("canvas").getContext("2d");
-        window.myLine = new Chart(ctx, config);
+        fetch("data.csv")
+          .then(response => response.text())
+          .then(data =>
+            data
+              .split("\n")
+              .map(item =>
+                item
+                  .split(",")
+                  .map((value, index) => (index == 1 ? parseInt(value) : value))
+              )
+          )
+          .then(data => {
+            const config = getConfig(data);
+            var ctx = document.getElementById("canvas").getContext("2d");
+            window.myLine = new Chart(ctx, config);
+          })
+          .catch(err => console.log(err));
       };
     </script>
   </body>
